<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_amount"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="6dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_amount"
            android:textSize="20sp"
            android:text="0.00"
            android:gravity="center"
            android:layout_marginTop="6dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_creditcard"
            android:textSize="20sp"
            android:text="@string/label_creditcard_detail"
            android:gravity="center"
            android:layout_marginTop="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cc_owner"
            android:layout_marginTop="5dp"
            android:hint="@string/label_cc_owner"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cc_number"
            android:layout_marginTop="5dp"
            android:hint="@string/label_cc_number"
            android:inputType="number"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cc_expiration_month"
            android:layout_marginTop="5dp"
            android:hint="@string/label_cc_month"
            android:inputType="number"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cc_expiration_year"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:hint="@string/label_cc_year"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cc_validation_code"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:hint="@string/label_cc_cvv"
            android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/dinersclub" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/mastercard" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/visa" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/americanexpress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/rbg_flag">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dinersclub"
                        android:checked="true"
                        android:layout_weight="1"
                        android:id="@+id/rbt_dinersclub"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MasterCard"
                        android:layout_weight="1"
                        android:id="@+id/rbt_mastercard"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Visa"
                        android:layout_weight="1"
                        android:id="@+id/rbt_visa"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Amex"
                        android:layout_weight="1"
                        android:id="@+id/rbt_amex"/>

                </RadioGroup>

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@mipmap/dinersclub" />-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@mipmap/mastercard" />-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@mipmap/visa" />-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@mipmap/americanexpress" />-->

            </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send"
            android:text="@string/label_send"
            android:textColor="#ffffff"
            android:background="#64d048"
            />

        </LinearLayout>

    </LinearLayout>

</ScrollView>